# prefect_sf_parsing

./: .gitignore  README.md  pyproject.toml
parsed_data/: votes.sqlite
prefect_sf_parsing/: downloaders.py  flow.py  loaders.py  models.py  parsers.py
tests/: test_prefect_sf_parsing.py
