[tool.poetry]
name = "prefect-sf-parsing"
version = "0.1.0"
description = "A Prefect-based data pipeline to process SF election data."
authors = ["Matthew Pancia <msp@themsp.org>"]

[tool.poetry.dependencies]
python = "^3.7"
prefect = "^0.7.3"
dask = "^2.8"
fsspec = "^0.6.1"
sqlalchemy = "^1.3"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.10"
autopep8 = "^1.4"
prefect = {version = "^0.7.3", extras = ["viz"]}
requires = ["poetry>=0.12"]
yapf = "^0.29.0"
